--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,8 @@ mysql-connector-python~=8.4.0
 customtkinter~=5.2.2
 pillow~=10.3.0
 bcrypt~=4.1.3
-python-dotenv
+python-dotenv~=1.0.1
+fastapi~=0.111.1
+cryptography~=42.0.8
+uvicorn~=0.30.3
+pydantic~=2.8.2
